--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -4,3 +4,15 @@
     --md-text-font: "IBM Plex Sans", "Roboto", sans-serif;
     /* color: red; */
 }
+
+[data-md-color-scheme="slate"] {
+    --md-default-bg-color:#121212;
+    --md-default-fg-color--light: white;
+    --md-code-bg-color: #2a2929;
+}
+
+.md-header, .md-tabs {
+    background-color: var(--md-default-bg-color);
+    color: var(--md-default-fg-color--light);
+    font-family: var(--md-text-font);
+}
